Wed Feb 13 11:46:54 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* XML/parser/parser/Makefile: Added a library (-lACEXML) to link
	  to.  Thanks to John Michael Zorko <j.zorko@att.net> for
	  reporting this.

Tue Feb 12 20:30:53 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* ace/WIN32_Proactor.cpp (handle_events): When the proactor
	  was called by the reactor in handle_signal() this method should
 	  loop till all events are done. But the loop never got executed
 	  twice because handle_events returned 1 on success and the loop
 	  exits.  To catch more than one notifications handle_events
 	  should be called again.  Even if the loop is executed twice and
 	  no more events are outstanding handle_events should return 0 and
 	  not -1 when calling with timeout 0.  Calling
 	  GetQueuedCompletionStatus with timeout value 0 returns FALSE and
 	  errno "ERROR_SUCCESS".  This check has to be added to
 	  handle_events and 0 has to be returned.  Thanks to Hartmut Quast
 	  <HartmutQuast@t-online.de> for reporting this.

Tue Feb 12 16:18:59 2002  Ossama Othman  <ossama@uci.edu>

	* tests/Proactor_Test.cpp (logflag):
	* tests/TP_Reactor_Test.cpp (logflag):

	  Removed these unused global variables.  Fixes an unused variable
	  warning.

Tue Feb 12 11:50:18 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* bin/pippen.pl: Applied a patch from "the source" to fix a
	  problem in determining project dependencies.

Tue Feb 12 09:37:56 2002  Ossama Othman  <ossama@uci.edu>

	* ACE-INSTALL.html:

	  Corrected EGCS documentation.  Native exception support is now
	  the default.  [Bug 1149]

	  G++ 2.7.x is no longer supported.  Updated accordingly.

Mon Feb 11 16:31:04 2002  Ossama Othman  <ossama@uci.edu>

	* bin/make_pretty.pl (is_warning):

	  Do not flag Fuzz's "#pragma warning(push)/(pop)" test title as a
	  warning.

Mon Feb 11 13:49:35 2002  Ossama Othman  <ossama@uci.edu>

	* bin/fuzz.pl (check_for_push_and_pop):
